<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/news_i13n_settings" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/news_i13nEnabled"
            android:summary="@string/news_i13n_summary"
            android:title="@string/news_i13n_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/news_trackLocEnabled"
            android:summary="@string/news_trackLocation_summary"
            android:title="@string/news_trackLocation_title" >
        </CheckBoxPreference>
       
    </PreferenceCategory>
	<PreferenceCategory android:title="@string/news_graphical_settings" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/news_flipViewEnabled"
            android:summary="@string/news_flipViewEnabled_summary"
            android:title="@string/news_flipViewEnabled_title" >
        </CheckBoxPreference>
       
    </PreferenceCategory>
</PreferenceScreen>